--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>B10A2-Versatile-UI</h1>
+    <!-- Header Section  -->
+     <header></header>
+
+    <!-- Main Section  -->
+     <main></main>
+
+    <!-- Footer Section  -->
+     <footer></footer>
+     
 </body>
 </html>
