--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!-- banner section  -->
             <div class="banner-section">
                 <!-- text div  -->
-                <div class="text-div">
+                <div class="banner-text-div">
                     <h1>Get body in <br> <span class="heading-span">shape</span> & stay <br> healthy</h1>
                     <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
                     <div class="btn-div">
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <!-- image div  -->
-                <div class="img-div">
+                <div class="banner-img-div">
                     <div class="image"><img src="./images/banner.png" alt=""></div>
                     <div class="card card-1">
                         <h3>500+</h3>
