Trainings and Exercises Done

--- a/index.html
+++ b/index.html
@@ -117,19 +117,48 @@
 
          </section>
 
-         <!-- Run an Extra Mile  -->
-          <section class="run-extra container">
-            <div class="run-extra-div">
-                <div class="run-text-div">
-                    <h2>Run an Extra <br>Mile Easily</h2>
-                    <p class="description">Staying active is not just about running longer; it's about living a healthier, happier life.</p>
-                    <button >Join Now!</button>
-                </div>
-                <div class="run-img-div">
-                    <img src="./images/run.jpg " alt="">
-                </div>
+        <!-- Run an Extra Mile  -->
+        <section class="run-extra container">
+        <div class="run-extra-div">
+            <div class="run-text-div">
+                <h2>Run an Extra <br>Mile Easily</h2>
+                <p class="description">Staying active is not just about running longer; it's about living a healthier, happier life.</p>
+                <button >Join Now!</button>
             </div>
-          </section>
+            <div class="run-img-div">
+                <img src="./images/run.jpg " alt="">
+            </div>
+        </div>
+        </section>
+
+
+        <!-- Trainings and Exercises -->
+        <section class="training container">
+        <div class="training-text-div titles">
+            <h2>Trainings and Exercises</h2>
+            <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income <br>or access to a gym.</p>
+        </div>
+        <!-- img div  -->
+        <div class="training-img-div">
+            <div class="img-div-1">
+                <div class="training-img img-1"><p>Leg Press: Works the quadriceps</p></div>
+                <div class="training-img img-2"><p>Leg Press: Works the quadriceps</p></div>
+                <div class="training-img img-3"><p>Leg Press: Works the quadriceps</p></div>
+            </div>
+            <div class="img-div-2">
+                <div class="training-img img-4"><p>Leg Press: Works the quadriceps</p></div>
+                <div class="training-img img-5"><p>Leg Press: Works the quadriceps</p></div>
+                <div class="training-img img-6"><p>Leg Press: Works the quadriceps</p></div>
+            </div>
+        </div>
+        
+        </section>
+
+
+        
+
+
+
 
 
      </main>
