Meet Our Team Done

--- a/index.html
+++ b/index.html
@@ -155,7 +155,24 @@
         </section>
 
 
+
+        <!-- Meet Our Team -->
+        <section class="training  container">
+        <div class="training-text-div titles">
+            <h2>Meet Our Team</h2>
+            <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income <br>or access to a gym.</p>
+        </div>
+        <!-- img div  -->
+        <div class="team-div">
+            <div class="team-img team-1"><div><h5>Jerome Bell</h5><p class="description">Trainer</p></div></div>
+            <div class="team-img team-2"><div><h5>Cameron Williamson</h5><p class="description">Trainer</p></div></div>
+            <div class="team-img team-3"><div><h5>Darrell Steward</h5><p class="description">Trainer</p></div></div>
+            <div class="team-img team-4"><div><h5>Dianne Russell</h5><p class="description">Trainer</p></div></div>
+            <div class="team-img team-5"><div><h5>Cody Fisher</h5><p class="description">Trainer</p></div></div>
+            <div class="team-img team-6"><div><h5>Theresa Webb</h5><p class="description">Trainer</p></div></div>
+        </div>
         
+        </section>
 
 
 
