--- a/index.html
+++ b/index.html
@@ -181,7 +181,36 @@
      </main>
 
     <!-- Footer Section  -->
-     <footer></footer>
+     <footer>
+        <div class="container">
+            <div class="main-footer">
+                <div class="fitness">
+                    <h2>Fitness</h2>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                </div>
+                <div class="get-started links">
+                    <p>Get Started</p>
+                    <ul>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Affiliate Program</a></li>
+                        <li><a href="#">About Us</a></li>
+                    </ul>
+                </div>
+                <div class="get-started links">
+                    <p>Quick Links</p>
+                    <ul>
+                        <li><a href="#">Fitness</a></li>
+                        <li><a href="#">Platform</a></li>
+                        <li><a href="#">Workout Libary</a></li>
+                        <li><a href="#">App Design</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr style="color:#414040">
+            <div class="copyright"><p>All right reserved @Fitness 2024</p></div>
+        </div>
+     </footer>
 
 </body>
 </html>
