BMI Calculator Done

--- a/index.html
+++ b/index.html
@@ -175,6 +175,57 @@
         </section>
 
 
+        <!--  BMI Calculator-->
+        <section class="bmi container">
+            <!-- text div  -->
+            <div class="training-text-div titles"></div>
+                <h2>BMI Calculator</h2>
+                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <!-- bmi main div  -->
+            <div class="bmi-main">
+                <div class="bmi-chart">
+                    <h4>BMI Calculator Chart</h4>
+                    <table border="1">
+                        <tr><th>BMI</th><th>Weight Status</th></tr>
+                        <tr><td>Below 18.5</td><td>Underweight</td></tr>
+                        <tr><td>18.5 - 24.9</td><td>Healthy</td></tr>
+                        <tr><td>25.0 - 29.9</td><td>Overweight</td></tr>
+                        <tr><td>30.0 - and Above</td><td>Obese</td></tr>
+                    </table>
+                </div>
+                <div class="bmi-calc">
+                    <div>
+                        <h4>Calculate your BMI</h4> 
+                        <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                    </div>
+                    <!-- inpu area  -->
+                    <div class="input-area"></div>
+                        <div class="input1">
+                            <input type="text" placeholder="Height/cm">
+                            <input type="text" placeholder="Height/cm">
+                        </div>
+                        <div class="input2">
+                            <input type="text" placeholder="Height/cm">
+                            <select name="gender" id="">
+                                <option value="">Sex</option>
+                                <option value="">Male</option>
+                                <option value="">Female</option>
+                                <option value="">None</option>
+                            </select>
+                        </div>
+                        <select name="select-factor" id="select-factor">
+                            <option value="">Select an activity factor</option>
+                            <option value="">Run</option>
+                            <option value="">Seating</option>
+                            <option value="">Movment</option>
+                        </select><br>
+                        <button id="calculate">Calculate</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 
 
