BMI Calculator Done

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <!-- text div  -->
                 <div class="banner-text-div">
                     <h1>Get body in <br> <span class="heading-span">shape</span> & stay <br> healthy</h1>
-                    <p>A huge selection of health and fitness content, healthy recipes and  stories to <br>help you get fit and stay fit!</p>
+                    <p>A huge selection of health and fitness content, healthy recipes and  stories to help you get fit and stay fit!</p>
                     <div class="btn-div">
                         <button >Join Now!</button>
                         <button class="btn-secondary">Download App</button>
