Extra Section  Done

--- a/index.html
+++ b/index.html
@@ -226,7 +226,56 @@
             </div>
         </section>
 
+        <!-- Extra Section  -->
+         <section>
+            <!-- Extra section starts here -->
+            <div class="ExtraContainer container">
+                <div class="extraboxess">
+                    <div class="extrabox">
+                        <div>
 
+                            <i class="fa-brands fa-connectdevelop"></i>
+                            <h3 class="extrabox-head-h3">Connect US</h3>
+                        </div>
+                        <p class="extrabox-head-p">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.
+                        </p>
+
+                        <div><button class="read-more">Read More.. <i class="fa-solid fa-angles-right"></i></button></div>
+
+
+
+                    </div>
+                    <div class="extrabox">
+                        <div>
+
+                            <i class="fa-solid fa-magnifying-glass-chart"></i>
+                            <h3 class="extrabox-head-h3">Polling</h3>
+                        </div>
+                        <p class="extrabox-head-p">We believe fitness should be accessible to everyone, everywhere, regardless
+                            of income or access to a gym.
+                        </p>
+                        <div><button class="read-more">Read More.. <i class="fa-solid fa-angles-right"></i></button></div>
+
+
+                    </div>
+                    <div class="extrabox">
+                        <div>
+
+                            <i class="fa-solid fa-ranking-star"></i>
+                            <h3 class="extrabox-head-h3">Ratings</h3>
+                        </div>
+                        <p class="extrabox-head-p">We believe fitness should be accessible to everyone, everywhere, regardless
+                            of income or access to a gym.
+                        </p>
+                        <div><button class="read-more">Read More.. <i class="fa-solid fa-angles-right"></i></button></div>
+
+
+                    </div>
+                </div>
+            </div>
+
+            <!-- Extra section ends here -->
+         </section>
 
 
      </main>
