Extra Section  Done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- custom css  -->
     <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body style="height: 500vh;">
+<body>
     <!-- Header Section  -->
      <header >
         <section class="container">
